--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/archiver": "^6.0.2",
-    "archiver": "^6.0.1"
+    "archiver": "^6.0.1",
+    "fs-extra": "^11.1.1"
   }
 }
