--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "update": "TS_NODE_TRANSPILE_ONLY=true npx ts-node-esm ./src/update.ts",
-    "package": "TS_NODE_TRANSPILE_ONLY=true npx ts-node-esm ./src/package.ts"
+    "package": "TS_NODE_TRANSPILE_ONLY=true npx ts-node-esm ./src/package.ts ./demo"
   },
   "keywords": [],
   "author": "Jerzy Adamowski",
